--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
-.App {
-  text-align: center;
+.movie-list {
+  font-family: sans-serif;
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: #ffffff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.movie-name {
+  margin-bottom: 0px;
+  font-size: 24px;
+  font-family: fantasy;
+  font-style: italic;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.movie-name,
+.movie-rating {
+  color: #808080;
+  margin-top: 8px;
+}
+
+.movie-poster {
+  height: 500px;
+  width: 340px;
+  object-fit: cover;
+  border-radius: 15px;
+}
+
+.movie-rating {
+  font-size: 18px;
+  font-family: fantasy;
+  color: #000000;
+}
+
+.movie-summary {
+  color: #000000;
+  margin-top: 0px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.movie-specs {
+  display: flex;
+  justify-content: space-between;
+}
+
+.movie-container {
+  width: 340px;
+  height:min-content;
+  box-shadow: 5px 10px 8px hsl(0, 0%, 53%)
+}
+
+.movie-container:hover {
+  transform: scale(1.03);
+  cursor: pointer;
+}
+
+.add-movie-form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 10px;
+  padding: 8px;
 }
 
-.App-link {
-  color: #61dafb;
+.add-movie-form > input,
+.add-movie-form > button {
+  font-size: 18px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add-movie-form > button {
+  margin-bottom: 10px;
 }
+
+.btn {
+  font-family: fantasy;
+  font-style: italic;
+}
+
+.likebtn {
+  font-size: 20px;
+}
+
+.dislikebtn {
+ font-size: 20px;
+}
+
+.btn:hover {
+  color: #000000;
+  background-color: #000000;
+}
+
